--- a/Projects/nettsider/Nettside fagdag/index.html
+++ b/Projects/nettsider/Nettside fagdag/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>vagina</title>
+        <title>Kim</title>
         <link rel="stylesheet" href="CSS/i.css">
         <link rel="icon" href="../Kodefan/Bilder/finger.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
